@@ -2033,7 +2033,7 @@ C<$topic> argument and C<$assuming> as its C<$assuming> argument; the first
 and second tuples have no attribute names in common, and the result tuple
 is derived by joining the tuples together.
 
-=item C<sys.Core.Relation.summarization>
+=item C<sys.Core.Relation.summary>
 
 I<TODO.>
 
