@@ -3,12 +3,14 @@ use utf8;
 use strict;
 use warnings FATAL => 'all';
 
+use version;
+
 use Test::More;
 
 plan( 'tests' => 2 );
 
 use_ok( 'Language::MuldisD' );
-is( $Language::MuldisD::VERSION, 0.012000,
+is( $Language::MuldisD::VERSION, qv('0.12.0'),
     'Language::MuldisD is the correct version' );
 
 1; # Magic true value required at end of a reusable file's code.
