@@ -6,6 +6,15 @@
     * Language::MuldisD version 0.13.0 is released on CPAN as
     Language-MuldisD-0.13.0.tar.gz.
 
+    * As of this release, the in-code $VERSION declarations of all Perl 5
+    packages in this distribution are changed to match the X.Y.Z format
+    that the same packages' own VERSION POD had all along (the old in-code
+    format was X.00Y00Z).  A consequence of this change is that this
+    distribution has gained an external dependency on the Perl 5 module
+    'version', which is not bundled with Perl 5.8.x; however, it *is*
+    bundled with Perl 5.10.x, so if you are using that newer Perl, you
+    won't have to install 'version' separately from CPAN.
+
     * New file versions are: MuldisD.pm 0.13.0 and Core.pod 0.11.0.  The
     other pre-existing versioned files are unchanged.
 
@@ -15,7 +24,7 @@
     'exists' => 'is_member', 'insert' => 'insertion', 'delete' =>
     'deletion', 'evacuate' => 'empty', 'project' => 'projection', 'remove'
     => 'cmpl_projection', 'tclose' => 'transitive_closure', 'restrict' =>
-    'restriction', 'extend' => 'extension', 'summarize' => 'summarization',
+    'restriction', 'extend' => 'extension', 'summarize' => 'summary',
     'substitute' => 'substitution', 'compose' => 'composition'.  Also
     renamed the enumerated value Cat.E_TDM:restrict to
     Cat.E_TDM:restriction.  Also added 2 new complementary functions
